--- a/training/linux.textile
+++ b/training/linux.textile
@@ -16,7 +16,7 @@ Applications > Ubuntu Software Center > Edit > Software Sources... > Other Softw
 
 setup google chrome preferences > personal stuff ( to sync everything )
 
-sudo apt-get install compiz compizconfig-settings-manager compiz-fusion-plugins-extra simple-ccsm sun-java6-jdk gnome-do gnome-do-plugins texlive-full emacs clisp slime latexdiff git-core git-gui gitosis gitweb ant maven2 pidgin meld apache2 auctex libtiff-tools openoffice.org transmission cups-pdf gimp xmlcopyeditor shutter vlc rar acroread 
+sudo apt-get install compiz compizconfig-settings-manager compiz-fusion-plugins-extra simple-ccsm sun-java6-jdk gnome-do gnome-do-plugins texlive-full emacs clisp slime latexdiff git-core git-gui gitosis gitweb ant maven2 pidgin meld apache2 auctex libtiff-tools openoffice.org transmission cups-pdf gimp xmlcopyeditor shutter vlc rar acroread p7zip-full
 
 some vnc's r good to add too.
 
@@ -60,6 +60,12 @@ bc.
 
 * Web Downloads
 Eclipse, SQLDeveloper, Skype, Adobe Acrobat Reader
+
+h2. Evolution setup
+
+* backup and import all data from old computer
+* Edit > Preferences > Composer Preferences > Forward/Reply Style > Inline
+
 
 h2. Set Open DSN Servers
 
