--- a/jeos/SettingUpVirtualLab.textile
+++ b/jeos/SettingUpVirtualLab.textile
@@ -248,9 +248,38 @@ Finally update your name servers, and root passwords
 
 bc. 
 [root@db11g ~]# cat > /etc/resolv.conf
-search ftravers.com
-nameserver 192.168.8.133
+search hk.oracle.com
+nameserver 10.179.253.14
+nameserver 146.56.237.50
+nameserver 140.83.70.155
+
 [root@db11g ~]# passwd
+
+h2. Install Software
+
+Most software install will be done via YUM(Yellowdog Update Manager), which is the default for Redhat based systems.  First thing we need to do is get a decent yum repo file going.  So lets download a latest version.  You might need to set your web proxy, so that step is listed first.  
+
+Put the export http_proxy line at the bottom of @/etc/profile@ so all users get this environment variable set.
+
+bc. 
+# vi /etc/profile
+export http_proxy=http://www-proxy.sg.oracle.com
+
+Download the repo file:
+
+bc. 
+cd /etc/yum.repos.d/
+
+In a browser on your local laptop navigate to: "http://public-yum.oracle.com/public-yum-el5.repo":http://public-yum.oracle.com/public-yum-el5.repo.  Save the file as: @public-yum-el5.repo@ to your desktop, and transfer it to the VM you are setting up into the folder: @/etc/yum.repos.d/@.  A command like the following should do the trick:
+
+bc. ~/Desktop$ scp public-yum-el5.repo root@alm.hk.oracle.com:/etc/yum.repos.d/
+
+Change all the enabled=0 to enabled=1, for: [el5_ga_base], [el5_u5_base], [ol5_u5_base], [el5_addons], and [el5_oracle_addons]
+
+Test it out:
+
+bc. yum install wget
+
 
 
 h1. Glossary
