--- a/jeos/virtualMachines.textile
+++ b/jeos/virtualMachines.textile
@@ -28,10 +28,10 @@ h4. All Hosts
 | vl-wlp1          | 10.179.252.31 |                                   |
 | "linux1":#linux1 | 10.179.252.32 | OVM TB Template                   |
 | vl-wciwcm1       | 10.179.252.35 |                                   | 
-| alm              | 10.179.252.39 | my OVM TB&Mangr                   |
+| "alm":#alm       | 10.179.252.39 | my OVM TB&Mangr                   |
 | youtube          | 10.179.252.38 |                                   |
-| ipm              | 10.179.252.41 |                                   |
-| "wcfs":#wcfs     | 10.179.252.40 | web apps for CRP                  |
+| "ipm":#ipm       | 10.179.252.41 | DEV glassfish                     |
+| "wcfs":#wcfs     | 10.179.252.40 | PROD glassfish - web apps for CRP |
 | vl-urmses        | 10.179.252.42 |                                   |
 | vl-autovue       | 10.179.252.37 |                                   |
 
@@ -64,6 +64,23 @@ The folder: @/mnt/vmsrv@ is @vl-vmsrv2:/OVS/downloads@ so you can copy the VM
 tarballs there.
 
 * unix user/password: oracle/welcome1
+
+h3(#alm). alm - TB
+
+This is the NEW Template Builder.  When it is finished we should delete "linux1":#linux1.
+
+http://alm.hk.oracle.com/ovmtb/  (username/password = oracle/welcome1)
+
+Created VM tarballs:
+
+bc. /opt/ovmtb/tarballs
+
+The folder: @/mnt/vmsrv@ is @vl-vmsrv2:/OVS/downloads@ so you can copy the VM
+tarballs there.
+
+* unix user/password: oracle/welcome1
+
+h3(#ipm). ipm
 
 
 h3(#wcfs). wcfs
